add check win, return game, range input

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                             </div>
                             <button id="startbutton" class="downbutton" onclick="startgame()" disabled> stargame</button>
                         </div>
+                        <div class="row" id="return-game">
+
+                        </div>
                     </div>
                 </div>
                 
