add 2user  and change winner logic

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
                         <div class="row">
                             <button class="Lesa hove" onclick="addplayer('lesa', 'button-lesa')" id="button-lesa" > Lesa</button>
                             <button class="Mam hove" onclick="addplayer('mam', 'button-mam')" id="button-mam"> Mam</button>
+                            <button class="Margo hove" onclick="addplayer('margo', 'button-margo')" id="button-margo"> Margo</button>
                         </div>
                         <div class="row">
                             <button class="Pap hove" onclick="addplayer('pap', 'button-pap' )" id="button-pap"> Pap</button>
                             <button class="Vitali hove" onclick="addplayer('vit', 'button-vit')" id="button-vit"> Vitali</button>
+                            <button class="Alena hove" onclick="addplayer('alena', 'button-alena')" id="button-alena"> Alena</button>
                         </div>
                     </div>
                     <div class="otherplayer" >
